# RingDistanceProtection-v2

./: .gitignore  CMakeLists.txt  Page1Form.ui.qml  README.md  controlpanel.cpp  controlpanel.h  main.cpp  main.qml  qml.qrc
Elements/: DPTerminalButton.qml  EquipmentPopup.qml  ProtectionPopup.qml
Pages/: MainPage.qml  ParametersPage.qml
csvFiles/: Buses.csv  DistanceProtections.csv  Systems.csv  Transformers.csv  WLines.csv
csvFiles/ss1/: Buses.csv  Systems.csv
csvFiles/ss2/: DistanceProtections.csv  Systems.csv  Transformers.csv  WLines.csv
sources/: main.cpp  window.cpp  window.h
sources/substationModels/: function.cpp  function.h  substation.cpp  substation.h  voltagelevel.cpp  voltagelevel.h
substationModels/: connectivitynode.cpp  connectivitynode.h  distanceprotection.cpp  distanceprotection.h  equipment.cpp  equipment.h  function.cpp  function.h  substation.cpp  substation.h  system.cpp  system.h  terminal.cpp  terminal.h  transformer.cpp  transformer.h  voltagelevel.cpp  voltagelevel.h  wline.cpp  wline.h
substationModels/DataModels/: protectedequipment.cpp  protectedequipment.h
substationModels/EquipmentModels/: equipment.cpp  equipment.h  protectedequipment.cpp  protectedequipment.h  system.cpp  system.h  transformer.cpp  transformer.h  wline.cpp  wline.h
substationModels/TerminalModels/: distanceprotection.cpp  distanceprotection.h  terminal.cpp  terminal.h
substationSubModels/: connectivitynode.cpp  connectivitynode.h  distanceprotection.cpp  distanceprotection.h  equipment.h  function.cpp  function.h  substation.cpp  substation.h  system.cpp  terminal.cpp  terminal.h  transformer.h  voltagelevel.cpp  voltagelevel.h  wline.cpp  wline.h
